@@ -1,3 +1,7 @@
+2007-05-28  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/Makefile: use dblatex for building PDF document.
+
 2007-05-27  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: remove reference to
